fix scrollbar corner

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,14 +31,15 @@
   height: 7px;
   width: 7px;
   background: #040714;
-  border-radius: 4px;
+}
+::-webkit-scrollbar-track {
+  margin: 4px 0;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 0;
   background: #8d8d8d;
   border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(201, 201, 201);
+  background: #c9c9c9;
 }
